<resources>
    <string name="app_name">国典艺藏网</string>
    <string name="setting_language_auto">自动</string>
    <string name="setting_language_english">英文</string>
    <string name="setting_simplified_chinese">中国区</string>
    <string name="hint_layout_no_data">亲，暂无数据</string>
    <string name="hint_layout_error_request">亲，请求出错了</string>
    <string name="hint_layout_error_network">亲，没有网络了</string>
    <string name="confirm">确定</string>
    <string name="wechat_friend">微信好友</string>
    <string name="wechat">微信</string>
    <string name="wechat_circle">朋友圈</string>
    <string name="share_to">分享至</string>
    <string name="dialog_update_status_running">下载中</string>
    <string name="dialog_update_status_successful">立即安装</string>
    <string name="dialog_update_status_failed">下载失败</string>
    <string name="dialog_update_status_paused">暂停中</string>
    <string name="dialog_update_status_pending">等待下载</string>
    <string name="dialog_update_download_fail">启动下载失败</string>
    <string name="dialog_update_permission_hint">必须先要授予权限才能正常下载更新哦</string>
    <string name="dialog_update_button">升级</string>
    <string name="loading">加载中...</string>
    <string name="status_empty">暂时没有内容，去逛逛其他内容</string>
    <string name="hint_retry">有10条新推荐了，点击查看~</string>
    <string name="status_error">加载失败，点击重试</string>
    <string name="status_network_error">网络错误，点击重试</string>
    <string name="status_not_found">你要找的内容被删除了，去看看其他的吧</string>
    <string name="status_float">点击这里看看</string>
    <string name="status_check_network">网络不给力，请检查网络设置</string>
    <string name="status_check">检查</string>
    <string name="phone">手机号</string>
    <string name="pwd">密码</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="home">首页</string>
    <string name="category">分类</string>
    <string name="customer">客服</string>
    <string name="user_center">个人中心</string>
    <string name="release">发布</string>
    <string name="re_sent">秒后可重新发送</string>
    <string name="re_get_ver_code">重新获取验证码</string>
    <string name="input_phone">请输入手机号</string>
    <string name="ver_code">验证码</string>
    <string name="input_ver_code">请输入验证码</string>
    <string name="get_ver_code">获取验证码</string>
    <string name="set_pwd">设置密码</string>
    <string name="input_pwd">请输入密码</string>
    <string name="re_set_pwd">确认密码</string>
    <string name="sure_pwd">请重新输入密码</string>
    <string name="read_and_agree">阅读并同意</string>
    <string name="lectroneic_protocol"><![CDATA[<<电子协议>>]]></string>
    <string name="phone_null">手机号不能为空</string>
    <string name="phone_wrong">手机号码格式不正确</string>
    <string name="pwd_null">登录密码不能为空</string>
    <string name="pwd_less">登录密码必须六位以上数字或字母</string>
    <string name="ver_code_null">手机验证码不能为空</string>
    <string name="sure_pwd_null">您在为确认密码</string>
    <string name="pwd_no_same">两次输入的密码不一致</string>
    <string name="regist">注册</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="new_pwd">新密码</string>
    <string name="re_set_new_pwd">确认新密码</string>
    <string name="sure_new_pwd">请确认新密码</string>
    <string name="my_order">我的订单</string>
    <string name="to_be_payment">待付款</string>
    <string name="to_be_shipped">待发货</string>
    <string name="to_be_received">待收货</string>
    <string name="completed">已完成</string>
    <string name="balance">余额</string>
    <string name="my_share">我的分享</string>
    <string name="modifying_data">修改资料</string>
    <string name="system_bulletin">系统公告</string>
    <string name="bid_record">出价记录</string>
    <string name="seller_center">卖家中心</string>
    <string name="mine">我的</string>
    <string name="address">地址</string>
    <string name="nick_name">昵称</string>
    <string name="head_img">头像</string>
    <string name="quit">退出登录</string>
    <string name="quit_login">退出登录</string>
    <string name="sure_quit_login">确定要退出登录?</string>
    <string name="album">相册</string>
    <string name="title">标题</string>
    <string name="modify_nick_name">修改昵称</string>
    <string name="modify_nick_name_sure">请输入你要修改的昵称</string>
    <string name="name">姓名</string>
    <string name="input_name">请输入真实姓名</string>
    <string name="id">身份证号(选填)</string>
    <string name="input_id">请填写身份证号</string>
    <string name="identity_card_photos">请上传身份证正反面照片\n(选填)</string>
    <string name="shop_name">店铺名称</string>
    <string name="input_shop_name">请填写店铺名称</string>
    <string name="shop_head_img">店铺头像</string>
    <string name="boutique_shop">全球区店铺</string>
    <string name="leak_shop">中国区店铺</string>
    <string name="shop_join_pay">支付  </string>
    <string name="application_for_settlement">申请入驻</string>
    <string name="shop_join">商家入驻</string>
    <string name="shop_head_selet">店铺选择</string>
    <string name="shop_head_is_pai">是否参与竞拍</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="bid_amount">加价幅度</string>
    <string name="input_bid_amount">请输入加价一次幅度</string>
    <string name="mix_bid_amount">最低竞拍价</string>
    <string name="input_mix_bid_amount">请输入最近竞拍价</string>
    <string name="bid_time">竞拍时间</string>
    <string name="input_bid_time">请选择竞拍时间</string>
    <string name="hotline">热线电话:</string>
    <string name="input_hotline">请输入热线电话</string>
    <string name="shop_order">商家订单</string>
    <string name="shop_apply">商家申请</string>
    <string name="shop_relese">发布产品</string>
    <string name="add_new_address">添加新地址</string>
    <string name="address_name">最少两个字，最多八个字</string>
    <string name="region">地区</string>
    <string name="selet">请选择</string>
    <string name="address_detail">详细地址</string>
    <string name="input_detail_address">请填写您的详细地址</string>
    <string name="dialog_address_title">地区选择</string>
    <string name="search_hint">请输入关键字</string>
    <string name="search_good">请输入您所搜索的商品</string>
    <string name="questionnaire">问卷调查</string>
    <string name="submit_questionnaire">提交问卷</string>
    <string name="distance_ends">距离结束：</string>
    <string name="hour">小时</string>
    <string name="minute">分钟</string>
    <string name="second">秒</string>
    <string name="home_title">竞拍商城</string>
    <string name="notice">通知:</string>
    <string name="null_data">暂无数据</string>
    <string name="shop">店铺</string>
    <string name="shop_detail">店铺详情</string>
    <string name="goods_list">商品列表</string>
    <string name="shop_comment">店铺评价</string>
    <string name="make_price">出个价</string>
    <string name="shop_in">进店</string>
    <string name="bond_top">出价前请先缴纳保证金</string>
    <string name="pay_sucess">支付成功</string>
    <string name="please_dao">请到</string>
    <string name="see_see">查看竞拍情况</string>
    <string name="bond">保证金</string>
    <string name="widtdraw_where">提现到:</string>
    <string name="alipay">支付宝</string>
    <string name="danwei">￥</string>
    <string name="arrival_time">预计到账时间:</string>
    <string name="cash_withdrawals">提现费用:</string>
    <string name="withdrawal">提现</string>
    <string name="customer_text">我们将全心全意为您提供满意周到的咨询服务\n也希望您能支持和监督我们的服务</string>
    <string name="call">拨打</string>
    <string name="goods_title">藏品标题</string>
    <string name="input_goods_title">请输入藏品标题</string>
    <string name="goods_specification">藏品规格</string>
    <string name="goods_description">藏品描述</string>
    <string name="input_goods_description">请输入藏品描述</string>
    <string name="weight">重量</string>
    <string name="input_weighte">请输入产品重量</string>
    <string name="place_of_origin">产地</string>
    <string name="input_place_of_origin">请输入产品产地</string>
    <string name="style">样式</string>
    <string name="input_style">请输入产品样式</string>
    <string name="goods_category">类别</string>
    <string name="input_goods_category">请输入产品类别</string>
    <string name="designer_frames">全球区</string>
    <string name="leak_hunting_area">国内区</string>
    <string name="new_user_on_road">新手上路</string>
    <string name="special_exhibition">展销专场</string>
    <string name="website">官网</string>
    <string name="later">稍后再说</string>
    <string name="re_login">重新登录</string>
    <string name="login_notice">提示</string>
    <string name="more_quit">：再按一次退出</string>
    <string name="logining">登录中...</string>
    <string name="price_start">起拍价 </string>
    <string name="add_once">加价幅度 </string>
    <string name="money">¥</string>
    <string name="is_jp">[精品]</string>
    <string name="goods_detail_time_count">距离结束</string>
    <string name="auction_over">拍卖已结束</string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="wechatpay_pay">微信支付</string>
    <string name="sure_pay">确认支付</string>
    <string name="sure_pay_title">确认付款</string>
    <string name="money_unit">元</string>
    <string name="null_offer">暂无出价</string>
    <string name="see_more">查看更多</string>
    <string name="leading">领先</string>
    <string name="out">出局</string>
    <string name="no_more_offer">暂无更多出价</string>
    <string name="day">天</string>
    <string name="offer_record">出价记录</string>
    <string name="dialog_select_hint">请选择</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="editing">编辑中...</string>
    <string name="adding">添加中...</string>
    <string name="pay_success">支付成功</string>
    <string name="please_wait_approval">请等待审核</string>
    <string name="join_status">入驻审核</string>
    <string name="add_new_spec">添加属性</string>
    <string name="over">完成</string>
    <string name="input_spec_name">规格名称</string>
    <string name="input_spec_content">请输入规格内容</string>
    <string name="spec_name">规格拟词</string>
    <string name="spec_content">规格内容</string>
    <string name="spec_null">请完善规格信息或删除多余规格</string>
    <string name="good_category">藏品分类</string>
    <string name="sel_category">选择分类</string>
    <string name="cate_null">暂未选择二级分类</string>
    <string name="joining">入驻中...</string>
    <string name="releaseing">发布中...</string>
    <string name="release_min_price_null">出价金额不能为空</string>
    <string name="release_bid_price_null">最低竞拍价不能为空</string>
    <string name="release_time_null">竞拍截止时间不能为空</string>
    <string name="margin">保证金</string>
    <string name="input_margin">请输入保证金</string>
    <string name="release_margin_price_null">保证金不能为空</string>
    <string name="release_title_null">产品标题不能为空</string>
    <string name="category_null">产品分类不能为空</string>
    <string name="good_pic_null">产品图片不能为空</string>
    <string name="shop_wallet">商家钱包</string>
    <string name="shop_colse">店铺已关闭</string>
    <string name="alipay_msg">支付宝信息</string>
    <string name="bank_card_msg">银行卡信息</string>
    <string name="realname">姓名:</string>
    <string name="account">账户:</string>
    <string name="bank_name">银行名称:</string>
    <string name="card_num">卡号:</string>
    <string name="bank_khh">开户行</string>
    <string name="input_realname">请输入账号绑定的真实姓名</string>
    <string name="alipay_account">支付宝账号</string>
    <string name="input_alipay_acc">请输入支付宝账号</string>
    <string name="ver_code_msg">验证码:</string>
    <string name="eidt_alipay_msg">完善支付宝信息</string>
    <string name="alipay_account_null">支付宝账号不能为空</string>
    <string name="alipay_account_wrong">支付宝账号错误</string>
    <string name="alipay_account_name_null">支付宝绑定的真实姓名不能为空</string>
    <string name="binding">绑定中...</string>
    <string name="realname_bank">真实姓名:</string>
    <string name="input_bank_realname">请输入银行卡持卡人姓名</string>
    <string name="input_bank_name">请输入银行卡所属银行名称</string>
    <string name="bank_num">银行卡号:</string>
    <string name="bank_khh_msg">开户行:</string>
    <string name="input_bank_khh">请输入银行卡开户行</string>
    <string name="eidt_bank_msg">完善银行卡信息</string>
    <string name="bank_real_name_null">银行卡持卡人真实姓名不能为空</string>
    <string name="bank_name_null">银行卡所属银行名称不能为空</string>
    <string name="bank_num_null">银行卡号不能为空</string>
    <string name="bank_khh_null">银行卡所属开户行不能为空</string>
    <string name="alipay_msg_null">暂未绑定支付宝</string>
    <string name="bank_msg_null">暂未绑定银行卡信息</string>
    <string name="input_dizhi">请填写您的收货地区</string>
</resources>