<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/title"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_50"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/qb_px_1">

        <TextView
            android:layout_width="@dimen/qb_px_100"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/qb_px_15"
            android:text="@string/realname"/>

        <com.hlnwl.auction.view.widget.ClearEditText
            android:id="@+id/alipay_msg_realname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/input_realname"
            android:textSize="@dimen/qb_px_12"

            android:layout_marginRight="@dimen/qb_px_12"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_50"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/qb_px_1">

        <TextView
            android:layout_width="@dimen/qb_px_100"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/qb_px_15"
            android:text="@string/alipay_account"/>

        <com.hlnwl.auction.view.widget.ClearEditText
            android:id="@+id/alipay_msg_get_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/input_alipay_acc"
            android:textSize="@dimen/qb_px_12"
            android:inputType="phone"
            android:layout_marginRight="@dimen/qb_px_12"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_50"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/qb_px_1">

        <TextView
            android:layout_width="@dimen/qb_px_100"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/qb_px_15"
            android:text="@string/ver_code_msg"/>

        <com.hlnwl.auction.view.widget.ClearEditText
            android:id="@+id/alipay_msg_ver_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/input_ver_code"
            android:textSize="@dimen/qb_px_12"
            android:inputType="phone"
            android:layout_marginRight="@dimen/qb_px_12"/>

        <TextView
            android:id="@+id/alipay_msg_get_ver_code"
            android:layout_width="@dimen/qb_px_140"
            android:layout_height="wrap_content"
            android:textColor="@color/main"
            android:layout_marginRight="@dimen/qb_px_15"
            android:text="@string/get_ver_code"
            android:gravity="center"/>

    </LinearLayout>

    <com.flod.loadingbutton.LoadingButton
        android:id="@+id/alipay_msg_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="@dimen/qb_px_50"
        android:layout_marginLeft="@dimen/qb_px_30"
        android:layout_marginRight="@dimen/qb_px_30"
        android:background="@drawable/selector_btn"
        android:drawablePadding="10dp"
        android:gravity="center"
        android:minHeight="45dp"
        android:padding="8dp"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:enableShrink="false"
        app:endCompleteDrawable="@drawable/ic_successful"
        app:endFailDrawable="@drawable/ic_fail"
        app:loadingDrawablePosition="Start" />


</LinearLayout>