<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_250"
        android:orientation="vertical"
        android:background="@color/white"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/qb_px_50"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/qb_px_16"
            android:text="@string/pay_sucess"/>


        <LinearLayout
            android:id="@+id/bid_record_see"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/qb_px_60"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_dao"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bid_record"
                android:textColor="@color/main"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_see"/>


        </LinearLayout>




    </LinearLayout>

</RelativeLayout>